@@ -105,7 +105,7 @@ PL_ppaddr[OP_READLINK] = pp_slowop_profiler;
 PL_ppaddr[OP_RECV] = pp_slowop_profiler;
 PL_ppaddr[OP_REGCOMP] = pp_slowop_profiler;
 PL_ppaddr[OP_RENAME] = pp_slowop_profiler;
-PL_ppaddr[OP_REQUIRE] = pp_slowop_profiler;
+/* PL_ppaddr[OP_REQUIRE] = pp_slowop_profiler; XXX some corruption somewhere */
 PL_ppaddr[OP_REWINDDIR] = pp_slowop_profiler;
 PL_ppaddr[OP_RMDIR] = pp_slowop_profiler;
 PL_ppaddr[OP_SEEK] = pp_slowop_profiler;
