@@ -2,13 +2,15 @@
 
 Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2009-10-28 16:11:41 +0000 (Wed, 28 Oct 2009) $ $Revision: 891 $)
+(As of $Date: 2009-10-28 21:45:45 +0000 (Wed, 28 Oct 2009) $ $Revision: 893 $)
 
 =head2 Changes in Devel::NYTProf 2.11
 
 XXX subroutine profiler docs need update
-XXX OP_SUBSTCONT
+XXX OP_SUBSTCONT, OP_REQUIRE
 XXX should add test for embedded src code, incl string eval
+XXX handling of BEGIN's e.g., Perl::Critic::Document (1.105) line 325
+XXX fix treemap
 
   Note: The file format has changed. Old files can't be read.
 
